# diffbot_course

./: mapping.sh  navigation.sh  robot_launch.sh  simulation_launch.sh
bot_nav/: CMakeLists.txt  package.xml
bot_nav/config/: amcl_config.yaml  behavior.xml  bt_navigator.yaml  controller.yaml  mapper_params_online_async.yaml  planner_server.yaml
bot_nav/launch/: localization.launch.py  map_server.launch.py  mapping.launch.py  navigation.launch.py
bot_nav/maps/: my_map.pgm  my_map.yaml
bot_nav/rviz/: nav.rviz
diff_bot/: CMakeLists.txt
diff_bot/config/: diff_drive_controller.yaml
diff_bot/launch/: robot_launch.py  rsp.launch.py  simulation.launch.py
diff_bot/rviz/: show_robot.rviz
diff_bot/src/: cmd_vel_mapper.cpp
diff_bot/urdf/: caster_wheel.xacro  chassis.xacro  control.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  properties.xacro  robot.urdf  robot.urdf.xacro  wheels.xacro
diff_bot/worlds/: sim_world.world  simple_test_world.world  test_world.world
diff_bot/worlds/my_env/: model.sdf
diffdrive_arduino/: CMakeLists.txt  diffdrive_arduino_plugin.xml
diffdrive_arduino/include/diffdrive_arduino/: config.h  diffdrive_arduino.h  fake_robot.h
diffdrive_arduino/src/: diffdrive_arduino.cpp  fake_robot.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
